maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
      if (aBiscuit(j,i)==true){posBaggle=(j,i)}
                                         ^