maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var posBaggle : Array[Int] = new Array[Int](2)
  for (i<- 0 to getMondeHauteur()){
    for (j<- 0 to getMondeLargeur()){
      if (aBiscuit(j,i)==true){posBaggle=(j,i)}
    }
  }

    // Your code here
}